Tweaked line height for three column mode textareas, bigger text for note, item or tag title in three column mode. Fixed shift up/down in editor changing features, added initial esc handler to editor

--- a/frontend/app/src/static/less/inputs.less
+++ b/frontend/app/src/static/less/inputs.less
@@ -43,6 +43,13 @@ textarea {
   resize: none;
 }
 
+// For three column mode, the textarea line spacing needs to be more
+@media (min-width: @min-width-three-column) {
+  textarea {
+    line-height: (@grid-vertical-half + 4px);
+  }
+}
+
 // 1. Use same color in placeholders as in .downplayed.
 ::-webkit-input-placeholder {
    color: @color-text-downplayed; // [1]
