--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -201,6 +201,12 @@ Use `.text-details` to separate details from body text.
   .set-font-bold();
 }
 
+@media (min-width: @min-width-three-column) {
+  .text-heading-primary.large {
+    font-size: @size-font-large;
+  }
+}
+
 .text-downplayed {
   color: @color-text-downplayed;
 }
